--- a/src/stylesheets/layout/hat/default.scss
+++ b/src/stylesheets/layout/hat/default.scss
@@ -34,10 +34,6 @@
           margin: 0 0 0 pxToRem(24);
         }
 
-        &_color_orange {
-          color: #ef7f1a;
-        }
-
         .icon {
           width: pxToRem(16);
           margin: 0 pxToRem(8) 0 0;
